<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.1.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.1.0 https://maven.apache.org/xsd/maven-4.1.0.xsd">
  <modelVersion>4.1.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>4.0.4</version>
    <relativePath />
  </parent>
  <groupId>io.github.lishangbu</groupId>
  <artifactId>avalon-parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>
  <description>父工程</description>
  <licenses>
    <license>
      <name>AGPL-V3 License</name>
      <url>https://opensource.org/license/agpl-v3</url>
      <distribution>repo</distribution>
    </license>
  </licenses>
  <developers>
    <developer>
      <id>lisb</id>
      <name>Shangbu Li</name>
      <email>shangshili@hotmail.com</email>
    </developer>
  </developers>
  <scm>
    <connection>scm:git:https://github.com/lishangbu/avalon.git</connection>
    <developerConnection>scm:git:https://github.com/lishangbu/avalon.git</developerConnection>
    <url>https://github.com/lishangbu/avalon</url>
  </scm>
  <issueManagement>
    <system>GitHub Issues</system>
    <url>https://github.com/lishangbu/avalon/issues</url>
  </issueManagement>
  <properties>
    <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
    <docker.image.prefix>slf4j</docker.image.prefix>
    <docker.repository>docker.io</docker.repository>
    <java.version>25</java.version>
    <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
    <publishing.server.id>central</publishing.server.id>
    <spotless-maven-plugin.version>3.4.0</spotless-maven-plugin.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.github.lishangbu</groupId>
        <artifactId>avalon-dependencies</artifactId>
        <version>${project.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>com.github.therapi</groupId>
      <artifactId>therapi-runtime-javadoc</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <finalName>${project.artifactId}</finalName>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>com.diffplug.spotless</groupId>
          <artifactId>spotless-maven-plugin</artifactId>
          <version>${spotless-maven-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
          <version>${maven-gpg-plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <configuration>
            <!--https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/#build-image-->
            <image>
              <name>${docker.repository}/${docker.image.prefix}/${project.artifactId}</name>
              <publish>false</publish>
              <pullPolicy>IF_NOT_PRESENT</pullPolicy>
              <tags>
                <tag>latest</tag>
              </tags>
              <verboseLogging>false</verboseLogging>
            </image>
            <layers>
              <enabled>true</enabled>
            </layers>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <configuration>
          <java>
            <googleJavaFormat>
              <style>AOSP</style>
              <formatJavadoc>false</formatJavadoc>
            </googleJavaFormat>
          </java>
          <pom>
            <sortPom>
              <!-- pom 文件的编码方式 -->
              <encoding>${project.build.sourceEncoding}</encoding>
              <!-- 使用的行分隔符 -->
              <lineSeparator>\n</lineSeparator>
              <!-- 是否展开空元素 -->
              <expandEmptyElements>false</expandEmptyElements>
              <!-- 自闭合元素内部是否添加空格 -->
              <spaceBeforeCloseEmptyElement>true</spaceBeforeCloseEmptyElement>
              <!-- 是否保留空行 -->
              <keepBlankLines>false</keepBlankLines>
              <!-- 排序后的 pom 文件是否以换行符结束 -->
              <endWithNewline>true</endWithNewline>
              <!-- 缩进空格数 -->
              <nrOfIndentSpace>2</nrOfIndentSpace>
              <!-- 是否对空行进行缩进 -->
              <indentBlankLines>true</indentBlankLines>
              <!-- 是否对 schema 位置进行缩进 -->
              <indentAttribute>schemaLocation</indentAttribute>
              <!-- 元素的排序顺序：https://github.com/Ekryd/sortpom/wiki/PredefinedSortOrderProfiles -->
              <predefinedSortOrder>recommended_2008_06</predefinedSortOrder>
              <!-- 是否排序依赖项：https://github.com/Ekryd/sortpom/wiki/SortDependencies -->
              <sortDependencies>scope,groupId,artifactId</sortDependencies>
              <!-- 排序依赖管理：https://github.com/Ekryd/sortpom/wiki/SortDependencies -->
              <sortDependencyManagement>scope,groupId,artifactId</sortDependencyManagement>
              <!-- 排序依赖排除项：https://github.com/Ekryd/sortpom/wiki/SortDependencies -->
              <sortDependencyExclusions>groupId,artifactId</sortDependencyExclusions>
              <!-- 排序插件：https://github.com/Ekryd/sortpom/wiki/SortPlugins -->
              <sortPlugins>groupId,artifactId</sortPlugins>
              <!-- 是否排序属性 -->
              <sortProperties>true</sortProperties>
              <!-- 是否排序模块 -->
              <sortModules>true</sortModules>
              <!-- 是否排序插件执行项 -->
              <sortExecutions>true</sortExecutions>
            </sortPom>
          </pom>
        </configuration>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <configuration>
          <generateGitPropertiesFile>true</generateGitPropertiesFile>
          <includeOnlyProperties>
            <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
            <includeOnlyProperty>^git.commit.(id|message|time).*$</includeOnlyProperty>
          </includeOnlyProperties>
        </configuration>
        <executions>
          <execution>
            <id>get-the-git-infos</id>
            <goals>
              <goal>revision</goal>
            </goals>
            <phase>initialize</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <parameters>true</parameters>
          <release>${java.version}</release>
          <annotationProcessorPaths>
            <!-- lombok 插件 -->
            <annotationProcessorPath>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
            </annotationProcessorPath>
            <annotationProcessorPath>
              <groupId>com.github.therapi</groupId>
              <artifactId>therapi-runtime-javadoc-scribe</artifactId>
            </annotationProcessorPath>
            <annotationProcessorPath>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
            </annotationProcessorPath>
            <annotationProcessorPath>
              <groupId>org.hibernate.orm</groupId>
              <artifactId>hibernate-jpamodelgen</artifactId>
            </annotationProcessorPath>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <parallel>all</parallel>
          <threadCount>8</threadCount>
          <argLine>-Dfile.encoding=UTF-8 --enable-native-access=ALL-UNNAMED -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"</argLine>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>dev</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <repositories>
        <repository>
          <releases>
            <enabled>true</enabled>
          </releases>
          <snapshots>
            <enabled>false</enabled>
          </snapshots>
          <id>aliyun-maven</id>
          <name>Aliyun Public</name>
          <url>https://maven.aliyun.com/repository/public</url>
        </repository>
        <repository>
          <releases>
            <enabled>false</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
          <id>central-portal-snapshots</id>
          <name>Central Portal Snapshots</name>
          <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </repository>
      </repositories>
      <pluginRepositories>
        <pluginRepository>
          <releases>
            <enabled>true</enabled>
          </releases>
          <snapshots>
            <enabled>true</enabled>
          </snapshots>
          <id>aliyun-plugin</id>
          <url>https://maven.aliyun.com/repository/public</url>
        </pluginRepository>
      </pluginRepositories>
    </profile>
    <profile>
      <id>release</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <goals>
                  <goal>sign</goal>
                </goals>
                <phase>verify</phase>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <configuration>
              <charset>${project.build.sourceEncoding}</charset>
              <encoding>${project.build.sourceEncoding}</encoding>
              <docencoding>${project.reporting.outputEncoding}</docencoding>
              <doclint>none</doclint>
              <locale>zh_CN</locale>
              <notimestamp>true</notimestamp>
            </configuration>
            <executions>
              <execution>
                <goals>
                  <goal>jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <executions>
              <execution>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.sonatype.central</groupId>
            <artifactId>central-publishing-maven-plugin</artifactId>
            <version>${central-publishing-maven-plugin.version}</version>
            <extensions>true</extensions>
            <configuration>
              <publishingServerId>${publishing.server.id}</publishingServerId>
              <autoPublish>true</autoPublish>
              <waitUntil>published</waitUntil>
              <deploymentName>${project.groupId}:${project.artifactId}:${project.version}</deploymentName>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
